--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <%= BASE_URL %>  jsp的语法，动态获取当前文件夹下路径为 favicon.ico -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
